@@ -13,6 +13,8 @@
  + Custom map source from files XML schema changed: 
     new <sourceType> values: DIR_ZOOM_X_Y, DIR_ZOOM_Y_X, QUADKEY
     removed flipXYDirs (use <sourceType>DIR_ZOOM_Y_X</sourceType> instead
+ ! Custom map source from ZIPs: Handling for atlas types with two file 
+    extensions fixed
 
 1.9.2 (2011-10-12)
  + Custom map source from ZIP/files in file-system: added possibility to invert
